@@ -22,17 +22,19 @@ namespace Castle.MicroKernel.ComponentActivator
 	public class FactoryMethodActivator<T> : DefaultComponentActivator, IDependencyAwareActivator
 	{
 		private readonly Func<IKernel, ComponentModel, CreationContext, T> creator;
+		private readonly bool managedExternally;
 
 		public FactoryMethodActivator(ComponentModel model, IKernel kernel, ComponentInstanceDelegate onCreation, ComponentInstanceDelegate onDestruction)
 			: base(model, kernel, onCreation, onDestruction)
 		{
 			creator = Model.ExtendedProperties["factoryMethodDelegate"] as Func<IKernel, ComponentModel, CreationContext, T>;
+			managedExternally = (Model.ExtendedProperties["factory.managedExternally"] as bool?).GetValueOrDefault();
 			if (creator == null)
 			{
 				throw new ComponentActivatorException(
 					string.Format(
 						"{0} received misconfigured component model for {1}. Are you sure you registered this component with 'UsingFactoryMethod'?",
-						GetType().Name, Model));
+						GetType().Name, Model.Name));
 			}
 		}
 
@@ -42,6 +44,29 @@ namespace Castle.MicroKernel.ComponentActivator
 			return true;
 		}
 
+		public bool IsManagedExternally(ComponentModel component)
+		{
+			return managedExternally;
+		}
+
+		protected override void ApplyCommissionConcerns(object instance)
+		{
+			if (managedExternally)
+			{
+				return;
+			}
+			base.ApplyCommissionConcerns(instance);
+		}
+
+		protected override void ApplyDecommissionConcerns(object instance)
+		{
+			if (managedExternally)
+			{
+				return;
+			}
+			base.ApplyDecommissionConcerns(instance);
+		}
+
 		protected override object Instantiate(CreationContext context)
 		{
 			return creator(Kernel, Model, context);
@@ -49,6 +74,7 @@ namespace Castle.MicroKernel.ComponentActivator
 
 		protected override void SetUpProperties(object instance, CreationContext context)
 		{
+			// we don't
 		}
 	}
 }
